fix text alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -267,3 +267,7 @@ margin-bottom: 20px;
   text-align: left;
   
 }
+#left{
+  text-align: left;
+  
+}
